@@ -487,7 +487,8 @@ GF(a && GF(b) && c), G(F(a & c) & Fb)
 {first_match(1:e[*0..3])[*]}[]-> c, c W !e
 {first_match(first_match(a*;e);b)}[]->a, {first_match(a[*];e)}[]-> X(a | !b)
 {first_match(first_match(a*;e):b*)}[]->a, {first_match(a[*];e)}[]-> (a | !b)
-
+# issue 545
+{([*0]|a[*]|b);c}<>->d, {(a[*]|b);c}<>->d
 # issue 558 (was a false alarm, but still good to test)
 {(!b)[*3];b}!, !b & X(!b & X(!b & Xb))
 {(!b)[+];b}!, !b & XFb
